--- a/index.html
+++ b/index.html
@@ -1,21 +1,39 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقعي الشخصي</title>
+    <title>s2a22</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <h1>مرحبًا بك في موقعي</h1>
-        <div class="icon-container">
-            <a href="https://t.me/s2a22" target="_blank" class="icon" title="تيليجرام">📱 تيليجرام</a>
-            <a href="https://www.instagram.com/s2a2222" target="_blank" class="icon" title="إنستجرام">📸 إنستجرام</a>
+    <nav>
+        <div>s2a22</div>
+        <div>
+            <a href="#home">Home</a>
+            <a href="courses.html">Courses</a>
         </div>
-        <!-- الزر الذي سينقل المستخدم لصفحة "كورسات" -->
-        <div class="courses">
-            <a href="courses.html">كورسات</a>
+    </nav>
+
+    <div id="home" class="container">
+        <div class="form-box">
+            <form action="https://formspree.io/f/xjkgnkdy" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+
+        <div class="social">
+            <a href="https://instagram.com/s2a2222" class="social-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://t.me/s2a22" class="social-icon">
+                <i class="fab fa-telegram"></i>
+            </a>
         </div>
     </div>
 
