--- a/courses.html
+++ b/courses.html
@@ -1,57 +1,25 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>كورسات s2a22</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Courses | s2a22</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- شريط التنقل -->
-    <nav class="navbar">
-        <div class="logo">s2a22</div>
-        <ul class="nav-links">
-            <li><a href="index.html">الرئيسية</a></li> <!-- رابط للعودة إلى الصفحة الرئيسية -->
-            <li><a href="#about-courses">عن الكورسات</a></li>
-        </ul>
-        <div class="social-icons">
-            <a href="https://t.me/s2a22" target="_blank" class="icon-link" id="telegram-icon">
-                <img src="https://cdn-icons-png.flaticon.com/512/2111/2111614.png" alt="Telegram">
-            </a>
-            <a href="https://instagram.com/s2a2222" target="_blank" class="icon-link" id="instagram-icon">
-                <img src="https://cdn-icons-png.flaticon.com/512/1077/1077038.png" alt="Instagram">
-            </a>
+    <nav>
+        <div>s2a22</div>
+        <div>
+            <a href="index.html">Home</a>
+            <a href="courses.html">Courses</a>
         </div>
     </nav>
 
-    <!-- قسم الكورسات -->
-    <section class="courses-section">
-        <h2>كورسات s2a22</h2>
-        <p>نحن نعمل على إضافة كورسات جديدة قريبًا، تابعنا للحصول على أحدث المستجدات!</p>
-
-        <!-- صندوق انتظار -->
-        <div class="coming-soon-box">
-            <h3>الكورس الأول: قادم قريباً</h3>
-            <p>سيتم إضافة هذا الكورس في المستقبل القريب.</p>
-        </div>
-
-        <!-- صندوق انتظار آخر -->
-        <div class="coming-soon-box">
-            <h3>الكورس الثاني: قادم قريباً</h3>
-            <p>اكتشف المزيد عن هذا الكورس عند إطلاقه!</p>
-        </div>
-
-        <!-- زر العودة إلى الرئيسية -->
-        <div class="back-to-home">
-            <a href="index.html" class="back-btn">العودة للرئيسية</a>
-        </div>
-    </section>
-
-    <!-- التذييل -->
-    <footer class="footer">
-        <p>&copy; 2022 s2a22</p>
-    </footer>
-
-    <script src="script.js"></script>
+    <div class="coming-soon">
+        <h1>Coming Soon</h1>
+        <p>Please wait...</p>
+        <a href="index.html" class="back-btn">Back to Home</a>
+    </div>
 </body>
 </html>
