--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div id="home" class="container">
         <div class="form-box">
-            <form action="https://formspree.io/f/xjkgnkdy" method="POST">
+            <form id="contactForm" method="POST">
                 <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
+                <input type="email" name="email" id="emailInput" placeholder="Your Email" required>
                 <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
@@ -34,6 +34,12 @@
                 <i class="fab fa-telegram"></i>
             </a>
         </div>
+    </div>
+
+    <!-- Success Message -->
+    <div id="success-message" class="success-message">
+        <p>✓ Message sent successfully!</p>
+        <button onclick="closeSuccess()">Close</button>
     </div>
 
     <script src="script.js"></script>
